Small changes - Trip detailView

--- a/app/src/main/res/layout/content_trip_detail.xml
+++ b/app/src/main/res/layout/content_trip_detail.xml
@@ -48,32 +48,23 @@
             tools:text="1.1 miles away" />
 
 
-<!--        <LinearLayout
-            android:id="@+id/linlayout"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">-->
-
-
-            <TextView
-                android:id="@+id/tvTagsLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/tvDistance"
-                android:textSize="20sp"
-                tools:text="Tags: " />
+        <TextView
+            android:id="@+id/tvTagsLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/tvDistance"
+            android:textSize="20sp"
+            tools:text="Tags: " />
 
         <me.originqiu.library.EditTag
             android:id="@+id/etViewTripTags"
-            android:layout_below="@+id/tvDistance"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvDistance"
             android:layout_toRightOf="@+id/tvTagsLabel"
-            android:layout_height="wrap_content"/>
-<!--
-    </LinearLayout>
--->
+            app:tag_layout="@layout/view_sample_tag" />
 
         <View
             android:id="@+id/vTitle"
@@ -81,8 +72,6 @@
             android:layout_height="1dp"
             android:layout_below="@+id/etViewTripTags"
             android:background="#B0BEC5" />
-
-
 
         <LinearLayout
             android:id="@+id/llIcons"
@@ -129,6 +118,7 @@
                 tools:text="2 Places" />
 
             <TextView
+                android:id="@+id/tvRating"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
