--- a/app/src/main/res/layout/content_trip_detail.xml
+++ b/app/src/main/res/layout/content_trip_detail.xml
@@ -25,7 +25,8 @@
             android:layout_alignParentStart="true"
             android:textColor="@android:color/widget_edittext_dark"
             android:textSize="30sp"
-            tools:text="Test Trip" />
+            tools:text="Test Trip"
+            android:fontFamily="sans-serif" />
 
         <TextView
             android:id="@+id/tvTime"
@@ -35,7 +36,8 @@
             android:layout_alignParentStart="true"
             android:layout_below="@+id/tvTitle"
             android:textSize="20sp"
-            tools:text="Time: 2.5 hours" />
+            tools:text="Time: 2.5 hours"
+            android:fontFamily="sans-serif"/>
 
         <TextView
             android:id="@+id/tvDistance"
@@ -45,7 +47,8 @@
             android:layout_alignParentStart="true"
             android:layout_below="@+id/tvTime"
             android:textSize="20sp"
-            tools:text="1.1 miles away" />
+            tools:text="1.1 miles away"
+            android:fontFamily="sans-serif"/>
 
 
         <TextView
@@ -56,6 +59,7 @@
             android:layout_alignParentStart="true"
             android:layout_below="@+id/tvDistance"
             android:textSize="20sp"
+            android:fontFamily="sans-serif"
             tools:text="Tags: " />
 
         <me.originqiu.library.EditTag
@@ -64,7 +68,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvDistance"
             android:layout_toRightOf="@+id/tvTagsLabel"
-            app:tag_layout="@layout/view_sample_tag" />
+            android:layout_toEndOf="@+id/tvTagsLabel"
+            app:tag_layout="@layout/custom_tag_bg" />
 
         <View
             android:id="@+id/vTitle"
@@ -93,11 +98,43 @@
                 android:layout_weight="1"
                 android:src="@drawable/favourite" />
 
-            <ImageView
+            <LinearLayout
+                android:id="@+id/llPrice"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:src="@drawable/price" />
+                android:gravity="center_horizontal">
+
+                <ImageView
+                    android:id="@+id/ivDollarCheap"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:visibility="gone"
+                    android:layout_marginRight="-50dp"
+                    android:layout_marginEnd="-50dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/dollar" />
+
+                <ImageView
+                    android:id="@+id/ivDollarNormal"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:src="@drawable/dollar" />
+
+                <ImageView
+                    android:id="@+id/ivDollarExpensive"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:visibility="gone"
+                    android:layout_marginLeft="-50dp"
+                    android:layout_marginStart="-50dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/dollar" />
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -115,7 +152,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                tools:text="2 Places" />
+                tools:text="2 Places"
+                android:fontFamily="sans-serif"
+                />
 
             <TextView
                 android:id="@+id/tvRating"
@@ -123,14 +162,17 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="4.5 Avg. Rating" />
+                tools:text="4.5 Avg. Rating"
+                android:fontFamily="sans-serif" />
 
             <TextView
+                android:id="@+id/tvPriceAvg"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="4 Avg. Price" />
+                tools:text="4 Avg. Price"
+                android:fontFamily="sans-serif" />
         </LinearLayout>
 
         <View
@@ -147,6 +189,7 @@
             android:layout_below="@+id/vIconsDetails"
             android:layout_marginBottom="15dp"
             android:layout_marginTop="15dp"
+            android:fontFamily="sans-serif"
             android:text="@string/points_interest"
             android:textSize="25sp" />
 
@@ -155,7 +198,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvPOI" />
-
 
     </RelativeLayout>
 
