--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/menu_main"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/navHome"
             android:icon="@drawable/ic_home_map"
@@ -10,16 +12,29 @@
             android:icon="@drawable/ic_profile"
             android:title="@string/nav_profile" />
         <item
+            android:id="@+id/navUserTrips"
+            android:icon="@drawable/ic_new_trip"
+            android:title="@string/nav_user_trips" />
+
+        <item
             android:id="@+id/navFavorites"
             android:icon="@drawable/ic_heart"
             android:title="@string/nav_favorites" />
         <item
             android:id="@+id/navNewTrip"
-            android:icon="@drawable/ic_new_trip"
+            android:icon="@drawable/ic_add_dark"
             android:title="@string/nav_new_trip" />
+
+    </group>
+
+    <group
+        android:id="@+id/menu_logout"
+        android:checkableBehavior="none">
         <item
             android:id="@+id/navLogout"
             android:icon="@drawable/ic_logout"
             android:title="@string/nav_logout" />
     </group>
+
+
 </menu>
