--- a/app/src/main/res/layout-v21/content_trip_detail.xml
+++ b/app/src/main/res/layout-v21/content_trip_detail.xml
@@ -199,7 +199,8 @@
             android:id="@+id/rvTrips"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvPOI" />
+            android:layout_below="@+id/tvPOI"
+            android:layout_marginBottom="50dp" />
 
     </RelativeLayout>
 
