--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,18 +2,40 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="30dp"
-
+    android:layout_marginTop="40dp"
+    android:paddingBottom="15dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+
+    <FrameLayout
+        android:id="@+id/flProfile"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="6dp">
+
+    <com.facebook.login.widget.ProfilePictureView
         android:id="@+id/ivProfile"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:src="@mipmap/ic_launcher"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+        <ImageView
+            android:id="@+id/android"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/subtracted_circle"
+            android:contentDescription="@null" />
+
+    </FrameLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -22,20 +44,18 @@
         android:text="User Name"
         android:textColor="#000"
         android:id="@+id/tvUserName"
-        android:layout_alignTop="@+id/ivProfile"
-        android:layout_toRightOf="@+id/ivProfile"
-        android:layout_toEndOf="@+id/ivProfile" />
+        android:layout_marginLeft="63dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Email"
+        android:layout_marginTop="3dp"
         android:textColor="#000"
         android:id="@+id/tvEmail"
         android:layout_below="@+id/tvUserName"
-        android:layout_toRightOf="@+id/ivProfile"
-        android:layout_toEndOf="@+id/ivProfile" />
+        android:layout_marginLeft="63dp"  />
 
     <View
         android:layout_below="@+id/tvEmail"
