Create Trip is multiple views :)

--- a/app/src/main/res/menu/menu_trip_create.xml
+++ b/app/src/main/res/menu/menu_trip_create.xml
@@ -6,6 +6,7 @@
         android:title="Done"
         android:textColor="#fff"
         android:text="Done"
+        android:visible="false"
         app:showAsAction="ifRoom|collapseActionView"/>
 
 </menu>
