--- a/app/src/main/res/layout-v21/item_trip.xml
+++ b/app/src/main/res/layout-v21/item_trip.xml
@@ -10,7 +10,9 @@
     android:layout_marginRight="@dimen/activity_horizontal_small_margin"
     android:layout_marginTop="@dimen/activity_vertical_small_margin"
     card_view:cardElevation="@dimen/cardview_default_elevation"
-    card_view:cardUseCompatPadding="true">
+    card_view:cardUseCompatPadding="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
