--- a/app/src/main/res/layout/item_place.xml
+++ b/app/src/main/res/layout/item_place.xml
@@ -4,46 +4,6 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:layout_width="25dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/ivIconNumber"
-        android:src="@drawable/marker"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvNumber"
-        tools:text="1"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        android:textSize="8dp"
-        android:layout_alignTop="@+id/tvPlaceName"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Andrews Ice Cream"
-        android:id="@+id/tvPlaceName"
-        android:layout_marginTop="13dp"
-        android:textSize="16sp"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/ivIconNumber"
-        android:layout_toEndOf="@+id/ivIconNumber" />
-
-
-    <ImageView
-        android:id="@+id/ivPlacePhoto"
-        android:layout_width="300dp"
-        android:adjustViewBounds="true"
-        android:scaleType="fitXY"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/ivIconNumber"
-        android:layout_height="200dp" />
 
     <View
         android:id="@+id/vTitle"
@@ -55,5 +15,50 @@
         android:layout_marginBottom="5dp"
         android:layout_below="@+id/ivPlacePhoto"
         android:background="#B0BEC5" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Andrews Ice Cream"
+        android:id="@+id/tvPlaceName"
+        android:textSize="16sp"
+        android:layout_alignTop="@+id/ivIconNumber"
+        android:layout_toRightOf="@+id/ivIconNumber"
+        android:layout_toEndOf="@+id/ivIconNumber"
+        android:layout_marginTop="14dp" />
+
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/ivIconNumber"
+        android:src="@drawable/marker"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="19dp"
+        android:layout_above="@+id/vTitle"
+        android:layout_toRightOf="@+id/ivPlacePhoto"
+        android:layout_toEndOf="@+id/ivPlacePhoto" />
+
+    <ImageView
+        android:id="@+id/ivPlacePhoto"
+        android:layout_width="100dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:layout_height="100dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvNumber"
+        tools:text="1"
+        android:textSize="8dp"
+        android:layout_alignBaseline="@+id/tvPlaceName"
+        android:layout_alignBottom="@+id/tvPlaceName"
+        android:layout_alignLeft="@+id/ivIconNumber"
+        android:layout_alignStart="@+id/ivIconNumber"
+        android:paddingLeft="10dp" />
 
 </RelativeLayout>
