--- a/app/src/main/res/layout/item_place_list.xml
+++ b/app/src/main/res/layout/item_place_list.xml
@@ -13,7 +13,7 @@
             android:layout_height="100dp" >
 
             <ImageView
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="fill_parent"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentRight="true"
